[package]
name = "psi_device_tree"
version = "2.2.0"
edition = "2021"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>", "Daniel Maslowski <info@orangecms.org>"]
license = "MIT"
description = "Reads and parses Linux device tree images"
repository = "https://github.com/platform-system-interface/device_tree-rs"
documentation = "https://docs.rs/psi_device_tree"

[dependencies]
hashbrown = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }

[features]
string-dedup = [] # Requires std

[[bin]]
name = "extract-dtb"
path = "extract-dtb/main.rs"
